--- a/environment.yml
+++ b/environment.yml
@@ -30,7 +30,7 @@ dependencies:
     - pip:
         - Pillow
         - atari-py
-        - pyprind
+        - tqdm
         - ipdb
         - boto3
         - PyOpenGL
@@ -53,7 +53,6 @@ dependencies:
         - pyglet
         - git+https://github.com/neocxi/prettytensor.git
         - jupyter
-        - progressbar2
         - chainer==1.18.0
         - https://storage.googleapis.com/tensorflow/linux/gpu/tensorflow_gpu-1.0.1-cp35-cp35m-linux_x86_64.whl; 'linux' in sys_platform
         - https://storage.googleapis.com/tensorflow/mac/gpu/tensorflow_gpu-1.0.1-py3-none-any.whl; sys_platform == 'darwin'
